syntax = "proto3";

package terraformerpb;

option go_package = "terraformerpb;terraformerpb";

message Project {
  string id = 1;
  string name = 2;
  Cluster cluster = 3;
}

message Cluster {
  Network network = 1;
  repeated Node control_plane = 2;
  repeated Node compute_plane = 3;
  string kubernetes_version = 4;
}

message Network {
  string ip = 1;
  string mask = 2;
}

message Node {
  string public_ip = 1;
  string private_ip = 2;
}

service BuildInfrastructureService {
  rpc BuildInfrastructure(Project) returns(Project);
}